--- a/examples/sun.glyph.json5
+++ b/examples/sun.glyph.json5
@@ -1,4 +1,18 @@
 {
+   // Header Section (REQUIRED)
+  "magic": "GLYPH",
+  "version": "0.1",
+  "id": "550e8400-e29b-41d4-a716-446655440000",
+  "hash": "blake3:abc123...",
+  "signature": "ed25519:def456...",
+  "created_at": "2025-01-15T10:30:00Z",
+  // Origin Block (RECOMMENDED)
+  "origin": {
+    "creator": "agent:glyphos:core",
+    "timestamp": "2025-01-15T10:30:00Z",
+    "signature": "ed25519:def456..."
+  },
+  // General
   "label": "sun",
   "aliases": [
     "star",
@@ -19,13 +33,16 @@
       }
     ],
   },
+  // Enhanced truth_mode
   "truth_mode": {
     "type": "empirical",
     "confidence": 0.98,
     "verified_by": [
       "agent:NASA",
       "agent:ESA"
-    ]
+    ],
+    // Add any contradicting glyphs
+    "conflicts": []
   },
   // Audio Block
   "audio": {
